# learning-swe

./: Makefile  pyproject.toml
.github/workflows/: build-and-test.yaml  build-and-test.yml  python-app.yml
learning_swe/: pyproject.toml
learning_swe/learning_swe/learn_dataclass/: dataclass.py
learning_swe/learning_swe/learn_decorator/: learn_decorator.py
learning_swe/learning_swe/learn_pytest/: codebase.py
learning_swe/tests/: conftest.py  test_codebase.py
