[tool.poetry]
name = "learning-swe"
version = "0.1.0"
description = "Package for learning SWE aspect of DS"
authors = ["anggi-permana <anggi.permana@mondu.ai>"]
packages = [{include = "learning_swe"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
