[tool.poetry]
name = "learning-swe"
version = "0.1.0"
description = ""
authors = ["anggi-permana <anggi.permana@mondu.ai>"]
readme = "README.md"
packages = [{include = "learning_swe"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
