[tool.poetry]
name = "learning-swe"
version = "0.1.0"
description = ""
authors = ["anggi-permana <anggi.permana@mondu.ai>"]
readme = "README.md"
packages = [{include = "learning_swe"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
isort = "^5.12.0"
black = "^23.1.0"
bandit = "^1.7.5"
flake8 = "^6.0.0"
pylint = "^2.17.1"
makefile = "^1.1.0"
numpy = "^1.24.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
